--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="container-fsc__img">
             <img src="./assets/img/yaga-img.svg"></div>
             <div class="container__info container-fsc__info">
-                <h1 class="container__title container-fsc__title">Зручні та швидкі покупки через телеграм-бот</h1>
+                <h1 class="container__title container-fsc__title font-title">Зручні та швидкі покупки через телеграм-бот</h1>
                 <a href="#" class="btn_yellow animate__animated animate__pulse">Перейти до покупок</a>
             </div>
         </div>
@@ -75,25 +75,25 @@
     <section id="about-us">
         <div class="container container__about-us">
                 <div class="container__info container-about-us__info">
-                    <h1 class="container__title container-about-us__title">ПРО НАС</h1>
+                    <h1 class="container__title container-about-us__title font-title">ПРО НАС</h1>
                     <p class="container-about-us__subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ipsum corrupti aperiam quas modi natus et animi? Similique dolores molestiae, ipsa ut iusto velit numquam aut, nesciunt assumenda odit iste.</p>
                 </div>
                 <div class="about-us__row">
                     <div class="about-us__item" data-aos="fade-up" data-aos-delay="100" data-aos-easing="linear">
                         <img src="./assets/img/channel-icon.svg">
-                        <div class="about-us__item__title">Телеграм-канал</div>
+                        <div class="about-us__item__title font-title">Телеграм-канал</div>
                         <div class="about-us__item__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio labore ea error ipsum dignissimos vitae, iusto suscipit quaerat quae commodi aliquid quos porro in? Repellendus facere laborum nobis dolorem fuga.</div>
                         <a href="#" class="btn_yellow ">Перейти</a>
                     </div>
                     <div class="about-us__item" data-aos="fade-up" data-aos-delay="500" data-aos-easing="linear">
                         <img src="./assets/img/bot-icon.svg">
-                        <div class="about-us__item__title">Телеграм-бот</div>
+                        <div class="about-us__item__title font-title">Телеграм-бот</div>
                         <div class="about-us__item__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio labore ea error ipsum dignissimos vitae, iusto suscipit quaerat quae commodi aliquid quos porro in? Repellendus facere laborum nobis dolorem fuga.</div>
                         <a href="#" class="btn_yellow ">Перейти</a>
                     </div>
                     <div class="about-us__item" data-aos="fade-up" data-aos-delay="1000" data-aos-easing="linear">
                         <img src="./assets/img/chat-icon.svg">
-                        <div class="about-us__item__title">Телеграм-чат</div>
+                        <div class="about-us__item__title font-title">Телеграм-чат</div>
                         <div class="about-us__item__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio labore ea error ipsum dignissimos vitae, iusto suscipit quaerat quae commodi aliquid quos porro in? Repellendus facere laborum nobis dolorem fuga.</div>
                         <a href="#" class="btn_yellow ">Перейти</a>
                     </div>
