--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -131,7 +131,7 @@
                             <button id="red-sixty" class="btn_unit">60 капсул</button>
                             <button id="red-oh_eighty" class="btn_unit">180 капсул</button>
                             </div>
-                            <div class="catalog-price">500 грн</div>             
+                            <div class="catalog-price catalog-price-red">500 грн</div>             
                     </div>   
                      </div>
                     <div class="catalog__item">
@@ -157,7 +157,7 @@
                             <button id="p-sixty" class="btn_unit">60 капсул</button>
                             <button id="p-oh_eighty" class="btn_unit">180 капсул</button>
                             </div>
-                            <div class="catalog-price">500 грн</div> 
+                            <div class="catalog-price catalog-price-pantern">500 грн</div> 
                     </div>
                     </div>
                 </div>
@@ -371,7 +371,7 @@
 
             </div>
     </section>
-
+    <a href="#" class="back-to-top"><img src="./assets/img/back-to-top.svg"></a>
         </main>
         <footer>
             <div class="footer">
