--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 <a href="#about-us" >ПРО НАС</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#catalog">КАТАЛОГ</a>
+                                <a href="#catalog">ТОВАРИ</a>
                             </li>
                             <li class="menu-item">
                                 <a href="#faq">ЧАСТІ ЗАПИТАННЯ</a>
@@ -44,7 +44,7 @@
                                 <a href="#books">КНИГИ</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#delivery">ОПЛАТА ТА ДОСТАВКА</a>
+                                <a href="#delivery">ОПЛАТА І ДОСТАВКА</a>
                             </li>
                             <li class="menu-item">
                                 <a href="#video">ВІДЕОМАТЕРІАЛИ</a>
@@ -128,10 +128,10 @@
                             <p>Не є лікарським засобом</p>
                         </div>   
                         <div class="buttons-unit">
-                            <button id="red-sixty" class="btn_unit">60 капсул</button>
-                            <button id="red-oh_eighty" class="btn_unit">180 капсул</button>
+                            <button id="red-sixty" class="btn_unit">60 капсул - 0,5 г</button>
+                            <!-- <button id="red-oh_eighty" class="btn_unit">180 капсул</button> -->
                             </div>
-                            <div class="catalog-price catalog-price-red">500 грн</div>             
+                            <div class="catalog-price catalog-price-red">650 грн</div>             
                     </div>   
                      </div>
                     <div class="catalog__item">
@@ -154,10 +154,10 @@
                             <p>Не є лікарським засобом</p>
                         </div>
                         <div class="buttons-unit">
-                            <button id="p-sixty" class="btn_unit">60 капсул</button>
-                            <button id="p-oh_eighty" class="btn_unit">180 капсул</button>
+                            <button id="p-sixty" class="btn_unit">60 капсул - 0,5 г</button>
+                            <!-- <button id="p-oh_eighty" class="btn_unit">180 капсул</button> -->
                             </div>
-                            <div class="catalog-price catalog-price-pantern">500 грн</div> 
+                            <div class="catalog-price catalog-price-pantern">675 грн</div> 
                     </div>
                     </div>
                 </div>
